# RakCloudDesktop

./: .clang-format  .gitignore  CMakeLists.txt  README.md
proto/: rcmisc.proto  rcrequest.proto  rcresponse.proto
resources/: resources.qrc
src/: AuthWindow.cpp  AuthWindow.hpp  AuthWindow.ui  CommandLine.cpp  CommandLine.hpp  GeneralWindow.cpp  GeneralWindow.hpp  GeneralWindow.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  RakCloudManagerApi.cpp  RakCloudManagerApi.hpp  RinwaresRootCa.cpp  RinwaresRootCa.hpp  main.cpp  utils.cpp  utils.hpp
translations/: en_US.ts  ru_RU.ts
